tests/golden/compile-pass/iterator_range_for.rua
fn main() -> i64 {
    let mut total = 0;
    for value in 1..4 {
        total = total + value;
    }
    for value in 1..=3 {
        total = total + value;
    }
    total
}
