tests/golden/compile-fail/arithmetic_mixed_int_string.rua
fn main() {
    let _x = 1 + "hello";
}
